<resources>
    <string name="app_name">ShoeStore</string>
    <string name="login_title">Login</string>
    <string name="listing_title">Listing</string>
    <string name="instructions_title">Instructions</string>
    <string name="instructions_text">This is a shoe store application, click on the add button to add new items to the list</string>
    <string name="welcome_title">Welcome</string>
    <string name="detail_title">Detail</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_acc">New Account</string>
    <string name="next">next</string>
    <string name="add">Add</string>
    <string name="lorem_ipsum_5">"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit…"</string>
    <string name="lorem_ipsum_50">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nulla libero, luctus quis sapien nec, tincidunt volutpat mi. Pellentesque urna turpis, ornare non egestas in, gravida sed turpis. Sed porttitor porta mi, quis placerat nulla posuere sit amet. Vivamus at dictum leo. Vestibulum vel consequat velit, nec blandit nibh. Aliquam.  "</string>
    <string name="save">Save</string>
    <string name="product_name">Name</string>
    <string name="product_company">Company</string>
    <string name="product_size">Size</string>
    <string name="product_description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
</resources>
