<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />

        <variable
            name="viewModel"
            type="com.udacity.shoestore.ShoeViewModel" />
    </data>

    <!-- The usage of LinearLayout here was choosen because of the simplicity of the designed screen. As it is only
    some vertically aligned views, there's no need to use complex ViewGroups to build it   -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".screens.detail.DetailFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="8dp"
            android:text="@string/product_name" />

        <EditText
            android:id="@+id/edt_product_name"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_height="wrap_content"
            android:text="@={shoe.name}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/product_company" />

        <EditText
            android:id="@+id/edt_product_company"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_height="wrap_content"
            android:text="@={shoe.company}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/product_size" />

        <EditText
            android:id="@+id/edt_product_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:inputType="numberDecimal"
            android:text="@={shoe.size}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/product_description" />

        <EditText
            android:id="@+id/edt_product_description"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_height="wrap_content"
            android:text="@={shoe.description}"/>

        <Button
            android:id="@+id/btn_save"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save"
            android:onClick="@{ () -> viewModel.addShoe(shoe) }"/>

        <Button
            android:id="@+id/btn_cancel"
            style="@style/AppTheme.Button.Outlined"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>
</layout>