<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.screens.login.LoginViewModel" />
    </data>

    <!--  Only by convenience to spread the elements in the screen, in fact I though that making it via LinearLayout
    would be harder -->
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.login.LoginFragment">

        <TextView
            android:id="@+id/txt_login_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="8dp"
            android:text="@string/email"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/etd_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/txt_login_email"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txt_login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/etd_login_email"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/etd_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/txt_login_password"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_new_acc"
            style="@style/AppTheme.Button.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/new_acc"
            android:onClick="@{() -> viewModel.registerNewAccount() }"
            app:layout_constraintBottom_toTopOf="@id/btn_login" />

        <Button
            android:id="@+id/btn_login"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/login"
            android:onClick="@{() -> viewModel.doLogin() }"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>